// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> renders active 1`] = `
<div
  className="nz-toolbar-item-expandable-history-item nz-is-active"
  onClick={[Function]}
/>
`;

exports[`<Item /> renders correctly 1`] = `
<div
  className="nz-toolbar-item-expandable-history-item"
  onClick={[Function]}
/>
`;
